--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -13,6 +13,9 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "noImplicitReturns": true,
     "types": [
       "node",
       "vite-plugin-pwa/client"
