--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .DS_Store
 node_modules
-/dist
-src/api-generate
+dist
 
 # local env files
 .env.local
@@ -23,4 +22,3 @@ pnpm-debug.log*
 *.sw?
 
 mirai-reactivity-ws
-mirai-ts
